# SummerCart64

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  build.sh  build_in_docker.sh  build_pcb.sh  build_pcb_v1.sh  build_release.sh  docker_build.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: build.yml  docker.yml  main.yml  pull-request.yml
assets/: sc64_logo.blend
cfg/: ftdi_template.xml
docker/: Dockerfile  build.sh  setup_quartus.sh
docs/: 00_quick_startup_guide.md  01_memory_map.md  02_n64_commands.md  02_usb_commands.md  03_n64_commands.md  03_usb_interface.md  04_config_options.md  05_fw_and_sw_info.md  06_build_guide.md  06_manufacturing_guidelines.md  README.md  config_options.md  memory_map.md  n64_commands.md  usb_commands.md
fw/: .gitignore  README.md  SummerCart64.cof  SummerCart64.qpf  SummerCart64.qsf  SummerCart64.sdc  build.sh  constraints.sdc  sfp.spf  stp.stp
fw/btldr/: Makefile  SC64_PicoRV32I.ld  (+11 more)
hw/: .gitignore  README.md  SummerCart64.brd  SummerCart64.cam  SummerCart64.lbr  SummerCart64.sch  ftdi-template-release.xml  ftdi-template.xml
sw/deployer/: .gitignore  Cargo.toml  build.rs
sw/deployer/src/: debug.rs  disk.rs  main.rs  n64.rs
sw/deployer/src/sc64/: cic.rs  error.rs  ff.rs  firmware.rs  ftdi.rs  link.rs  mod.rs  serial.rs  server.rs  time.rs  types.rs  utils.rs
web/: bom.html  faq.html  features.html  index.html  script.js  styles.css
(+506 files in other folders)
