[package]
name = "sc64deployer"
version = "2.18.0"
edition = "2021"
authors = ["Polprzewodnikowy"]
description = "SummerCart64 loader and control software"
documentation = "https://github.com/Polprzewodnikowy/SummerCart64"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
clap-num = "1.0.2"
colored = "2.0.0"
crc32fast = "1.3.2"
ctrlc = "3.2.5"
encoding_rs = "0.8.32"
hex = "0.4.3"
image = "0.24.5"
include-flate = { version = "0.2.0", features = ["stable"] }
md5 = "0.7.0"
panic-message = "0.3.0"
rust-ini = "0.18.0"
serial2 = "0.1.7"
serialport = "4.2.0"

[profile.release]
lto = true
strip = true
