[package]
name = "sc64deployer"
version = "2.19.0"
edition = "2021"
authors = ["Polprzewodnikowy"]
description = "SummerCart64 loader and control software"
documentation = "https://github.com/Polprzewodnikowy/SummerCart64"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
clap-num = "1.1.1"
colored = "2.1.0"
crc32fast = "1.4.2"
ctrlc = "3.4.4"
encoding_rs = "0.8.34"
hex = "0.4.3"
image = "0.25.1"
include-flate = { version = "0.2.0", features = ["stable"] }
libftdi1-sys = { version = "1.1.3", features = ["libusb1-sys", "vendored"] }
libusb1-sys = { version = "0.6.5", features = ["vendored"] }
md5 = "0.7.0"
panic-message = "0.3.0"
rand = "0.8.5"
rust-ini = "0.18.0"
serial2 = "0.2.26"
serialport = "4.4.0"

[profile.release]
lto = true
strip = true
